--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,9 +24,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: set env
+        run: echo "NOW=$(date +'%Y.%m.%d')" >> $GITHUB_ENV    
       -
         name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: bjornjorgensen/jupyter-spark-master-docker:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/jupyter-spark-master-docker:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/jupyter-spark-master-docker:${{ env.NOW }},
