--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,4 +32,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/jupyter-spark-master-docker:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/jupyter-spark-master-docker:${{ env.NOW }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/jupyter-spark-master-docker:${{ env.NOW }} , ${{ secrets.DOCKER_HUB_USERNAME }}/jupyter-spark-master-docker:latest
