--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,6 +11,7 @@ on:
 env:
   org_secret: ${{ secrets.org }}
   projectKey_secret: ${{ secrets.projectKey }}
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -33,6 +34,36 @@ jobs:
       - 
         name: set env
         run: echo "NOW=$(date +'%d%m%Y')" >> $GITHUB_ENV    
+      -
+        name: set openjdk_version
+        run: ARG openjdk_version="17"
+      - 
+        name: install div
+        run: apt-get update --yes && \
+        apt-get install --yes --no-install-recommends \
+        "openjdk-${openjdk_version}-jdk-headless" \
+        ca-certificates-java \
+        git maven wget\
+        python3
+      -
+        name: clone spark master
+        run: git clone https://github.com/apache/spark.git
+      - 
+        name: install sonar 
+        run: ENV sonar=/usr/local/sonar && \
+        WORKDIR ${sonar} && \
+        wget -qO "sonar-scanner.zip" https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip && \
+        unzip "sonar-scanner.zip" && \
+        ENV PATH="${PATH}:${sonar}/sonar-scanner-4.7.0.2747-linux/bin"
+      - 
+        name: install mvn
+        run:
+      - 
+        name: build spark master
+        run:
+      - 
+        name: copy spark
+        run:
       -
         name: Build and push
         uses: docker/build-push-action@v3
