--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,8 +44,7 @@ jobs:
         apt-get install --yes --no-install-recommends \
         "openjdk-${openjdk_version}-jdk-headless" \
         ca-certificates-java \
-        git maven wget\
-        python3
+        git maven wget python3
       -
         name: clone spark master
         run: git clone https://github.com/apache/spark.git
