--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,6 +27,15 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
+        uses: actions/checkout@v3
+        name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: #mvn --batch-mode --update-snapshots package  
+      -
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -36,9 +45,6 @@ jobs:
         name: set env
         run: echo "NOW=$(date +'%d%m%Y')" >> $GITHUB_ENV    
       -
-        name: set openjdk_version
-        run: ARG openjdk_version="17"
-      - 
         name: install div
         run: apt-get install --yes --no-install-recommends "openjdk-${openjdk_version}-jdk-headless" ca-certificates-java git maven wget python3
       -
