--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,12 +29,11 @@ jobs:
       -
         uses: actions/checkout@v3
         name: Set up JDK 17
-       - uses: actions/setup-java@v3
+      -
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Build with Maven
-        run: #mvn --batch-mode --update-snapshots package  
       -
         name: Login to DockerHub
         uses: docker/login-action@v2
@@ -53,11 +52,10 @@ jobs:
       - 
         name: install sonar 
         run: ENV sonar=/usr/local/sonar && WORKDIR ${sonar} && wget -qO "sonar-scanner.zip" https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip && unzip "sonar-scanner.zip" && ENV PATH="${PATH}:${sonar}/sonar-scanner-4.7.0.2747-linux/bin"
-      -
         # name: install mvn
         # run:
-        # name: build spark master
-        # run:
+      #- name: Build with Maven
+        #run: mvn --batch-mode --update-snapshots package
         # name: copy spark
         # run:
       -
