--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,42 +1,54 @@
 name: ci
 
 on:
-  # Triggers the workflow every day
-  schedule:
-    - cron: "0 8 * * *" 
-    
   push:
     branches:
       - 'main'
+  schedule:
+    - cron: "0 8 * * *"
+
 env:
   org_secret: ${{ secrets.org }}
   projectKey_secret: ${{ secrets.projectKey }}
-  SONARQUBE_URL: ${{ secrets.SONARQUBE_URL}}
+  SONARQUBE_URL: ${{ secrets.SONARQUBE_URL }}
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
+        with:
+          version: latest
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: set env
-        run: echo "NOW=$(date +'%d%m%Y')" >> $GITHUB_ENV    
-      -
-        name: Build and push
+
+      - name: set env
+        run: echo "NOW=$(date +'%d%m%Y')" >> $GITHUB_ENV  
+
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
           push: true
-          tags: bjornjorgensen/jupyter-spark-master-docker:${{ env.NOW }} , bjornjorgensen/jupyter-spark-master-docker:latest
+          tags: bjornjorgensen/jupyter-spark-master-docker:${{ env.NOW }}, bjornjorgensen/jupyter-spark-master-docker:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
