Update runs-on value in spark-worker-and-driver job

--- a/.github/workflows/build_and_push_spark_images.yml
+++ b/.github/workflows/build_and_push_spark_images.yml
@@ -36,7 +36,7 @@ jobs:
 
   spark-worker-and-driver:
     needs: spark-builder
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         component: [worker, driver]
