--- a/.github/workflows/docker-build dep.yml
+++ b/.github/workflows/docker-build dep.yml
@@ -1,9 +1,12 @@
 name: build dep
 
 on:
+  push:
+    branches:
+      - "main"
   schedule:
     - cron: "0 8 1 * *"
-workflow_dispatch:
+
 
 jobs:
   docker:
