--- a/.github/workflows/docker-build dep.yml
+++ b/.github/workflows/docker-build dep.yml
@@ -1,9 +1,9 @@
 name: build dep
 
 on:
-  push:
-    branches:
-      - "main"
+  #push:
+   # branches:
+    #  - "main"
   schedule:
     - cron: "0 8 1 * *"
 
