Improve PySpark installation in Dockerfiles with enhanced symlink handling

--- a/driver/Dockerfile
+++ b/driver/Dockerfile
@@ -101,10 +101,13 @@ USER "${NB_USER}"
 # Ensure PATH is set correctly for this user session
 ENV PATH="/opt/venv/bin:${SPARK_HOME}/bin:${PATH}"
 
-# Install PySpark from source following the official guidance
-RUN cd ${SPARK_HOME}/python && \
-    python packaging/classic/setup.py sdist && \
-    pip install --no-cache-dir dist/*.tar.gz
+# Install PySpark from source with improved symlink handling
+RUN mkdir -p /tmp/pyspark_build && \
+    cp -r ${SPARK_HOME}/python/* /tmp/pyspark_build/ && \
+    cd /tmp/pyspark_build && \
+    python setup.py sdist && \
+    pip install --no-cache-dir dist/*.tar.gz && \
+    rm -rf /tmp/pyspark_build
 
 # --- Final configuration steps ---
 
