--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -40,23 +40,19 @@ WORKDIR /tmp
 
 COPY --from=builder /tmp/spark/spark-4.1.0-SNAPSHOT-bin-custom-spark.tgz /tmp/spark.tgz
 
-RUN tar xzf "spark.tgz" -C /usr/local --owner root --group root --no-same-owner && \
-  rm "spark.tgz"
-
-RUN mv /usr/local/spark-4.1.0-SNAPSHOT-bin-custom-spark /opt/spark
+# Unpack Spark, move it to /opt/spark, and remove the tarball
+RUN tar xzf /tmp/spark.tgz -C /usr/local && \
+    rm /tmp/spark.tgz && \
+    mv /usr/local/spark-4.1.0-SNAPSHOT-bin-custom-spark /opt/spark
 
 # Configure Spark paths
 ENV SPARK_HOME="/opt/spark"
 ENV PATH="${SPARK_HOME}/bin:${PATH}"
 
-# Install PySpark from source using the correct path to setup.py
-RUN python3 -m pip install --no-cache-dir --break-system-packages setuptools wheel && \
-    mkdir -p /tmp/pyspark_build && \
-    cp -r /opt/spark/python /tmp/pyspark_build/ && \
-    cd /tmp/pyspark_build/python/packaging/classic && \
-    python3 setup.py sdist && \
-    python3 -m pip install --no-cache-dir --break-system-packages dist/*.tar.gz && \
-    rm -rf /tmp/pyspark_build
+
+#USER "${NB_USER}"
+# Install PySpark from the local Spark directory
+RUN pip install -e /opt/spark/python/packaging/classic
 
 RUN ln -s "spark" "${SPARK_HOME}";
 
