--- a/dep-builder/Dockerfile
+++ b/dep-builder/Dockerfile
@@ -16,8 +16,12 @@ RUN apt-get update --yes && \
 # Activate virtual environment
 ENV PATH="/opt/venv/bin:$PATH"
 
-# Now use pip to install packages
-RUN pip install --upgrade pip setuptools
+# Install uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/root/.cargo/bin:$PATH"
+
+# Now use uv to install packages
+RUN uv pip install --upgrade pip setuptools
 
 
 
