--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -32,7 +32,7 @@ RUN apt-get update --yes && \
 
 # Install uv
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.cargo/bin:$PATH"
+ENV PATH="/root/.local/bin:$PATH"
 
 # Install pandas using uv
 RUN uv pip install --system pandas pyarrow
